# metric-capture-injector

./: CMakeLists.txt  a.out  function_enunciation.txt  generateMain.cpp~  generateMain_Iwrapper.cpp  generateMain_passbyvalue.cpp  main.bc  main.cpp  main.cpp.bkp  main.cpp.bkp1  main.cpp.dump  main.cpp.unified.exits.dump  main.cpp~  main.ll  main_create_BB.ll  main_disassembled.dis  main_instrumented.bc  main_not_instrumented.bc  main_not_instrumented.ll  opt_out.txt  programmatic_instrumented_pass_dump.ll  programmatic_pass_dump.ll  test.ll  test2.ll
include/: capturedb.h  capturedb.h~  capturefactory.h  capturefactory.h~  icapture.h  icapture.h~
injector/: CMakeLists.txt  EnunciatorPass.cpp  InjectorPass.bkp  InjectorPass.cpp
metric_capture/: CMakeLists.txt  FileSystem.cpp  capturedb.h  capturefactory.h  energycapture.h  icapture.h  json.hpp  messagefactory.h  rtlib.cpp  timercapture.cpp  timercapture.h
